[tool.poetry]
name = "pi-domain"
version = "0.1.0"
description = ""
authors = ["Chris Kemp <chris.kemp3@nhs.net>"]
readme = "README.md"
packages = [{include = "pi_domain"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
behave = "^1.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
